# Stock-Performace-Heatmap

./: .gitignore  MOCK_SIGNAL_THRESHOLDS.py  MOVING_AVERAGES_ANALYSIS_RECREATION_PROMPT.md  PHASE_0_MIGRATION_SUMMARY.md  README.md  SIGNAL_LOGIC_ARCHITECTURE_ANALYSIS.md  SIGNAL_LOGIC_LOCATIONS_TABLE.md  TASKS_comparison_guide.md  TECHNICAL_ANALYSIS_STORAGE_ARCHITECTURE.md  contract_audit.py  delete_check_technical_optionc.py  delete_check_technical_optionc_adapter.py  main.py  prove_existing_method.py  pyproject.toml  requirements.txt  stock_data.db  streamlit_app.py  test_Option5C.py  test_dashboard.py  utils_database.py  verify.py
.kiro/hooks/: auto-commit-message.kiro.hook  docs-sync-hook.kiro.hook
.kiro/steering/: architecture.md  development-process.md  environment.md  product.md  structure.md  tech.md
data/: stock_data.db
docs/: Master Checklist (Authoritative)- Phase 3.md  README.md  TA_RULE_ENGINE_CANONICAL_OUTLINE.md  minor_backlog.md
docs/architecture/: CODEBASE_ANALYSIS.md  NUMERIC_LAYER_CONTRACT.md  ROLLING_HEATMAP_ROW_ARCHITECTURE.md  Rolling Heatmap Selection & Catalog Contract.md  (+1 more)
docs/indicators/: ADX.md  (+19 more)
scripts/: compare_sources.py  debug_xlc.py  inspect_database.py  migrate_create_technical_variants_table.py  sql_delete_by_date.py
tests/: README.md  comprehensive_volume_test.py  simple_volume_test.py  test_performance_fix.py  test_phase1_ta_comprehensive_analysis.py  test_phase2A_db_save_logic.py  test_phase2_ta_moving_averages.py  test_volume_calculator.py  test_volume_integration.py  validate_database_schema.py  validate_pandas_ta.py
(+36 files in other folders)
