[project]
name = "stock-screener"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "mcp[cli]>=1.2.1",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "pyrate-limiter>=2.10.0",
    "python-dotenv>=1.1.0",
    "requests-cache>=1.2.1",
    "requests-ratelimiter>=0.7.0",
    "tabulate>=0.9.0",
    "yfinance>=0.2.63",
]
