[project]
name = "stock-heatmap-dashboard"
version = "0.1.0"
description = "Interactive stock performance heatmap dashboard"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cachetools>=5.3.0",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "mcp[cli]>=1.2.1",
    "numpy>=1.24.0",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "pyrate-limiter>=2.10.0",
    "python-dotenv>=1.1.0",
    "requests-cache>=1.2.1",
    "requests-ratelimiter>=0.7.0",
    "streamlit>=1.28.0",
    "tabulate>=0.9.0",
    "yfinance>=0.2.63",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
